# data-downloader

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  downloader.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  pythonpublish.yml
Tutorials/: GALLERY_HEADER.rst
Tutorials/base/: GALLERY_HEADER.rst  gpm.rst  sentinel1.rst  sentinel2.rst
Tutorials/service/: GALLERY_HEADER.rst  licsar.rst
data_downloader/: __init__.py  downloader.py  enums.py  licsar.py  logging.py  parse_urls.py  sentinel_aux.py
data_downloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data_downloader/enums/: __init__.py  hyp3.py
data_downloader/parse_urls/: __init__.py  _core.py  licsar.py  sentinel_aux.py
data_downloader/parse_urls/hyp3/: __init__.py  hyp3.py
data_downloader/service/: licsar.py
data_downloader/service/hyp3/: constants.py
data_downloader/services/: __init__.py  alos2.py  aria.py  asf_base.py  licsar.py  sentinel.py  sentinel1.py  sentinel_aux.py
data_downloader/services/earthaccess/: __init__.py  downloader.py  isce_dem.py
data_downloader/services/hyp3/: __init__.py  constants.py  hyp3.py  job_manager.py  jobs.py
data_downloader/utils/: __init__.py  baselines.py  inversion.py  pairs.py  tools.py  tsmodels.py
docs/: Makefile  doc_env.yml  requirements.txt
docs/source/: changelog.md  changelog.rst  conf.py  index.rst  quick_start.ipynb
docs/source/Tutorials/: hyp3_InSAR_job.ipynb  index.rst  licsar.ipynb  s1orbit.ipynb
docs/source/Tutorials/base/: gpm.rst  index.rst  sentinel1.rst  sentinel2.rst
docs/source/Tutorials/service/: hyp3_InSAR_job.ipynb  index.rst  licsar.rst  s1orbit.rst
docs/source/_static/css/: custom.css  gallery.css
docs/source/api/: downloader.rst  index.rst  parse_urls.rst  services.rst  utils.rst
docs/source/api/tables/: downloader.csv  hyp3.csv  parse_urls.csv  services.csv
docs/source/user_guide/: download.rst  hyp3_InSAR_job.ipynb  index.rst  netrc.ipynb  parse_url.ipynb  parse_urls.rst
tests/: README.md  __init__.py  conftest.py  requirements.txt  test_custom_logging.py  test_logging.py  test_logging_with_pprint.py  test_safe_repr.py
