[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_downloader"
version = "1.2"
description = "Make downloading scientific data much easier"
readme = "README.md"
authors = [
    { name="fanchegyan", email="fanchy14@lzu.edu.cn" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "httpx >= 0.4.0",
    "requests",
    "tqdm",
    "setuptools",
    "beautifulsoup4",
    "nest_asyncio",
    "python-dateutil",
    "browser-cookie3",
    "hyp3_sdk",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/Fanchengyan/data_downloader" 