[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "data_downloader"
version = "1.2"
description = "Make downloading scientific data much easier"
readme = "README.md"
authors = [
    { name="fanchegyan", email="fanchy14@lzu.edu.cn" }
]
license-files = ["LICENSE"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "httpx >= 0.4.0",
    "requests",
    "tqdm",
    "setuptools",
    "beautifulsoup4",
    "nest_asyncio",
    "python-dateutil",
    "browser-cookie3",
    "hyp3_sdk",
    "pandas",
    "geopandas",
    "colorlog"
]


[project.optional-dependencies]
dev = [
    "httpx >= 0.4.0",
    "requests",
    "tqdm",
    "setuptools",
    "beautifulsoup4",
    "nest_asyncio",
    "python-dateutil",
    "browser-cookie3",
    "hyp3_sdk",
    "pandas",
    "geopandas",
    "colorlog",
    "recommonmark",
    "sphinx>=7",
    "myst-nb",
    "sphinx-copybutton",
    "sphinx-design",
    "pydata_sphinx_theme",
    "Jinja2",
    "hyp3_sdk",
    "myst_sphinx_gallery"
]

[project.urls]
Homepage = "https://github.com/Fanchengyan/data_downloader"

[tool.setuptools]
packages = ["data_downloader"] 